--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,11 @@
         <!--        <item name="android:textColor">?attr/colorPrimary</item>-->
     </style>
 
+    <style name="MyAuthButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:padding">0dp</item>
+        <item name="cornerRadius">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:insetTop">0dp</item>
+    </style>
+
 </resources>
