--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="132dp"
+                android:layout_marginBottom="96dp"
                 android:text="@string/app_name"
                 android:textAllCaps="true"
                 android:textSize="16sp" />
@@ -65,27 +65,32 @@
                     android:layout_height="wrap_content"
                     android:inputType="textWebPassword" />
             </com.google.android.material.textfield.TextInputLayout>
+
             <!-- Snippet from "Add buttons" section goes here. -->
-            <RelativeLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/register_button"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/register_button"
+                    android:textAllCaps="false"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/login_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:text="@string/login_button" />
+                    android:text="@string/login_button"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
-                    android:layout_marginEnd="12dp"
-                    android:layout_toStartOf="@id/login_button"
-                    android:text="@string/button_cancel" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </RelativeLayout>
 
         </LinearLayout>
     </ScrollView>
